[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devpipe"
version = "0.1.0"
description = "Interactive browser monitoring and debugging toolkit for CDP-based browsers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Skyler Salebyan", email = "skylerbsaleebyan@gmail.com"}
]
keywords = ["cdp", "chrome", "devtools", "monitoring", "debugging", "automation", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "deepdiff>=6.0.0",
]

[project.scripts]
devpipe = "devpipe.cli:main"

[project.urls]
Homepage = "https://github.com/skyler14/devpipe"
Repository = "https://github.com/skyler14/devpipe"
Issues = "https://github.com/skyler14/devpipe/issues"
